Sat Sep 15 02:26:40 BST 2007  Olly Betts <olly@survex.com>

	* backends/flint/flint_cursor.cc,backends/flint/flint_cursor.h:
	  Implement FlintCursor::find_entry_ge() a little more efficiently
	  (we could do better still by modifying FlintTable too).

Sat Sep 15 00:56:54 BST 2007  Olly Betts <olly@survex.com>

	* backends/flint/flint_cursor.cc: If we found the exact key, just copy
	  it to current_key.

Fri Sep 14 21:52:45 BST 2007  Olly Betts <olly@survex.com>

	* backends/flint/: Overhaul FlintAllDocsPostList.

Fri Sep 14 19:20:56 BST 2007  Olly Betts <olly@survex.com>

	* backends/flint/flint_alltermslist.cc: Rework
	  FlintAllTermsList::skip_to() to use FlintCursor::find_entry_ge().

Fri Sep 14 17:45:06 BST 2007  Olly Betts <olly@survex.com>

	* backends/flint/flint_cursor.h: Improve documentation comment.

Fri Sep 14 17:28:17 BST 2007  Olly Betts <olly@survex.com>

	* backends/flint/flint_spellingwordslist.cc,
	  backends/flint/flint_synonym.cc: Use FlintCursor::find_entry_ge().
	* backends/flint/flint_synonym.h: Use FlintCursor::find_entry_lt().
	* backends/flint/flint_alltermslist.h: Use FlintCursor::find_entry_lt()
	  and skip any keys before "\x00\xff" to allow for extra metadata
	  keys.

Fri Sep 14 15:26:04 BST 2007  Olly Betts <olly@survex.com>

	* backends/flint/flint_cursor.cc,backends/flint/flint_cursor.h: The
	  reason why a deleted key is still visible to the cursor is that it
	  is running over the previous revision of the tree.  So we don't
	  need to call find_entry() at all - we can just call next().  Also
	  extend FlintCursor::del() to return whether the cursor is positioned
	  (like FlintCursor::next() does).
	* backends/flint/flint_postlist.cc: Use the return value of
	  FlintCursor::del().

Fri Sep 14 15:10:39 BST 2007  Olly Betts <olly@survex.com>

	* tests/Makefile.am: Reorder the testdata/flint-x.y.z files
	  consistently.

Fri Sep 14 12:48:04 BST 2007  Richard Boulton <richard@lemurconsulting.com>
