@@ -1,3 +1,13 @@
+Sat Sep 15 17:58:35 BST 2007  Olly Betts <olly@survex.com>
+
+	* api/omdatabase.cc,backends/database.cc,
+	  backends/flint/flint_database.cc,backends/flint/flint_database.h,
+	  backends/flint/flint_version.cc,
+	  backends/inmemory/inmemory_database.cc,
+	  backends/inmemory/inmemory_database.h,common/database.h,
+	  include/xapian/database.h,tests/api_wrdb.cc: Add support for user
+	  specified metadata (bug#143).
+
 Sat Sep 15 02:26:40 BST 2007  Olly Betts <olly@survex.com>
 
 	* backends/flint/flint_cursor.cc,backends/flint/flint_cursor.h:
